# py-cli

./: .gitignore  README.md  pyproject.toml  test.py  zycli.toml
tests/: test_clean.py
zyjared_cli/cli/: __init__.py  app.py  clean.py  config.py  push.py
zyjared_cli/cli/version/: __init__.py  version.py
zyjared_cli/helpers/: command.py  config.py  log.py  version.py
zyjared_cli/utils/: time_unit.py
